{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 45,
  "lineage": "00f70016-eb68-5205-1dd2-1f4dd248314b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:security-group/sg-05c5f33e955a6590c",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c5f33e955a6590c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "176906365059",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "env": "abrown-terraform"
            },
            "vpc_id": "vpc-0aa36868b28b1db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebc20648bf0a6fcc",
            "association_id": "eipassoc-0197f22548e10e59f",
            "domain": "vpc",
            "id": "eipalloc-0ebc20648bf0a6fcc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08b065b8ad9656d92",
            "private_dns": "ip-11-0-0-31.ec2.internal",
            "private_ip": "11.0.0.31",
            "public_dns": "ec2-35-173-89-86.compute-1.amazonaws.com",
            "public_ip": "35.173.89.86",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "env": "abrown-terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011b310dba602db61",
            "arn": "arn:aws:ec2:us-east-1:176906365059:instance/i-096dc651dd801b250",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096dc651dd801b250",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Abrown",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a974c5e012d554c5",
            "private_dns": "ip-11-0-0-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.0.236",
            "public_dns": "ec2-18-204-194-131.compute-1.amazonaws.com",
            "public_ip": "18.204.194.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eed277cf11133098",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070ba3baf03e36e71",
            "tags": {
              "Name": "abrown-terraform-EC2"
            },
            "tags_all": {
              "Name": "abrown-terraform-EC2",
              "env": "abrown-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c5f33e955a6590c"
            ]
          },
          "dependencies": [
            "aws_default_security_group.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:internet-gateway/igw-007899f14724142d4",
            "id": "igw-007899f14724142d4",
            "owner_id": "176906365059",
            "tags": {
              "Name": "abrown-terraform-IGW"
            },
            "tags_all": {
              "Name": "abrown-terraform-IGW",
              "env": "abrown-terraform"
            },
            "vpc_id": "vpc-0aa36868b28b1db9f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebc20648bf0a6fcc",
            "association_id": "eipassoc-0197f22548e10e59f",
            "connectivity_type": "public",
            "id": "nat-06d7e8334ebb7253e",
            "network_interface_id": "eni-08b065b8ad9656d92",
            "private_ip": "11.0.0.31",
            "public_ip": "35.173.89.86",
            "subnet_id": "subnet-070ba3baf03e36e71",
            "tags": {
              "Name": "abrown-terraform-nat"
            },
            "tags_all": {
              "Name": "abrown-terraform-nat",
              "env": "abrown-terraform"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bf244a66554f33df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d7e8334ebb7253e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf244a66554f33df",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main_nat_gw",
            "aws_route_table.private-rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-007899f14724142d4",
            "id": "r-rtb-040f660706da405e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040f660706da405e0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public-rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:route-table/rtb-0bf244a66554f33df",
            "id": "rtb-0bf244a66554f33df",
            "owner_id": "176906365059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d7e8334ebb7253e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "abrown-terraform-private-rt"
            },
            "tags_all": {
              "Name": "abrown-terraform-private-rt",
              "env": "abrown-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa36868b28b1db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:route-table/rtb-040f660706da405e0",
            "id": "rtb-040f660706da405e0",
            "owner_id": "176906365059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007899f14724142d4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "abrown-terraform-public-rt"
            },
            "tags_all": {
              "Name": "abrown-terraform-public-rt",
              "env": "abrown-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa36868b28b1db9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f72a951981bfcc4c",
            "route_table_id": "rtb-0bf244a66554f33df",
            "subnet_id": "subnet-03d5eb11250c688a1"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0315e2d36b04a08d5",
            "route_table_id": "rtb-0bf244a66554f33df",
            "subnet_id": "subnet-08b0f16b3619de761"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053d3968d2444e1b2",
            "route_table_id": "rtb-040f660706da405e0",
            "subnet_id": "subnet-070ba3baf03e36e71"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045c28a44d95359bf",
            "route_table_id": "rtb-040f660706da405e0",
            "subnet_id": "subnet-014a58de0184b708f"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-03d5eb11250c688a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d5eb11250c688a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abrown-terraform-Private-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "abrown-terraform-Private-Subnet-us-east-1a",
              "env": "abrown-terraform"
            },
            "vpc_id": "vpc-0aa36868b28b1db9f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-08b0f16b3619de761",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b0f16b3619de761",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abrown-terraform-Private-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "abrown-terraform-Private-Subnet-us-east-1b",
              "env": "abrown-terraform"
            },
            "vpc_id": "vpc-0aa36868b28b1db9f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-070ba3baf03e36e71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070ba3baf03e36e71",
            "ipv6_cidr_block": "2600:1f18:3006:c500::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0cb51d45a54d0143f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abrown-terraform-Public-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "abrown-terraform-Public-Subnet-us-east-1a",
              "env": "abrown-terraform"
            },
            "vpc_id": "vpc-0aa36868b28b1db9f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:subnet/subnet-014a58de0184b708f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014a58de0184b708f",
            "ipv6_cidr_block": "2600:1f18:3006:c501::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0c9e8ae3d2f668e3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "176906365059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abrown-terraform-Public-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "abrown-terraform-Public-Subnet-us-east-1b",
              "env": "abrown-terraform"
            },
            "vpc_id": "vpc-0aa36868b28b1db9f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:176906365059:vpc/vpc-0aa36868b28b1db9f",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-04b7fd99ea222466a",
            "default_route_table_id": "rtb-0c78d0e835809993f",
            "default_security_group_id": "sg-05c5f33e955a6590c",
            "dhcp_options_id": "dopt-01662f52edb1b9c77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa36868b28b1db9f",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-057f1aabb758bc4c7",
            "ipv6_cidr_block": "2600:1f18:3006:c500::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c78d0e835809993f",
            "owner_id": "176906365059",
            "tags": {
              "Name": "abrown"
            },
            "tags_all": {
              "Name": "abrown",
              "env": "abrown-terraform"
            }
          }
        }
      ]
    }
  ]
}